corrects the spacing between buttons on board highlight

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -77,7 +77,6 @@ html.turbolinks-progress-bar::before
     border: 5px solid lighten($gray-base, 20%)
     .board-name-description
       transition: all 300ms
-      transform: scale(1.2)
       color: lighten($gray-base, 20%)
     .board-name-description:hover
       color: lighten($gray-base, 10%)
@@ -98,6 +97,10 @@ html.turbolinks-progress-bar::before
   background-color: lighten($gray-base, 10%)
   padding: 10px 15px 15px 15px
   border-radius: 10px
+  font-size: 1.2em
+  .btn-board-group
+    float: right
+
 
 .new-list-button
   position: absolute
